# Resonance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/chamber/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/chamber/src/: App.svelte  styles.css
apps/chamber/src-tauri/: Cargo.toml  tauri.conf.json
apps/chamber/src-tauri/capabilities/: default.json
apps/chamber/src-tauri/icons/: icon.icns
apps/chamber/src-tauri/src/: lib.rs  main.rs
apps/chamber/src/lib/: Automation.svelte  Countdown.svelte  Rings.svelte  ipc.ts
apps/resctl/: Cargo.toml
apps/resctl/src/: main.rs
crates/conductor/: Cargo.toml
crates/conductor/src/: lib.rs  watch.rs
crates/resonance-core/: Cargo.toml
crates/resonance-core/src/: config.rs  guard.rs  lib.rs  paths.rs  rules.rs
crates/tuner/: Cargo.toml
crates/tuner/src/: display.rs  doctor.rs  dpi.rs  lib.rs  vendor.rs
docs/: ARCHITECTURE.md  ROADMAP.md
docs/adr/: 0001-driver-first-super-resolution.md  0002-tech-stack.md
docs/research/: phase0-dump.txt  phase0-findings.md
poc/drs-probe/: Cargo.toml
poc/drs-probe/src/: display.rs  main.rs  nvapi.rs
site/: index.html
