[package]
name = "chamber"
version = "0.1.0"
description = "Resonance — super-resolution control center"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "chamber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = "1"
resonance-core.workspace = true
tuner.workspace = true
conductor.workspace = true
